cleanup for artifact